--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
             <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
             
-            <img src="diceImages/dice-1.png" alt="Dice" class="dice">
+            <img src="diceImages/dice-1.png" alt="Dice" class="dice-1">
+            <img src="diceImages/dice-1.png" alt="Dice" class="dice-2">
         </div>
         
         <script src="app.js"></script>
